classview: hopefully fix hideClassButton on IE

--- a/client/app/classView/classView.styl
+++ b/client/app/classView/classView.styl
@@ -39,7 +39,7 @@ span#changeClassIcon
 button#hideClassButton
 	col(10/12)
 	shift(2/12)
-	float: initial
+	float: none !important
 	text-align: center !important
 
 	+mobile()
